[package]
name = "rplinstaller"
version = "1.0.0"
authors = ["c0repwn3r"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
online = { version = "3.0.1",  default-features = false, features = ["sync"] }
colored = "*"
futures = "*"
reqwest = { version = "0.11.3", features = ["stream"] }
futures-util = "0.3.14"
indicatif = "0.15.0"
